oatmeal biscuits image saved to images directory. oatmeal biscuits image added to oatmeal biscuits recipe page.

--- a/pages/oatmeal-biscuits.html
+++ b/pages/oatmeal-biscuits.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Ann's Oatmeal Biscuits</h1>
+        <p><img src="../images/oatmeal-biscuits.jpg" alt="stacked fresh oatmeal bisuits"></p>
     </body>
 </html>
