--- a/pages/oatmeal-biscuits.html
+++ b/pages/oatmeal-biscuits.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Ann's Oatmeal Biscuits</h1>
+        <p>This is a family recipe that for years was kept on a scrap of paper tucked away in an old recipe book at my mother's house. The recipe came from an old neighbour of ours on the Legaterriff Road and has been improved on by my mother, Clare.</p>
         <p><img src="../images/oatmeal-biscuits.jpg" alt="stacked fresh oatmeal bisuits"></p>
     </body>
 </html>
