ingredients list added to oatmeal-biscuits

--- a/pages/oatmeal-biscuits.html
+++ b/pages/oatmeal-biscuits.html
@@ -6,7 +6,15 @@
     </head>
     <body>
         <h1>Ann's Oatmeal Biscuits</h1>
-        <p>This is a family recipe that for years was kept on a scrap of paper tucked away in an old recipe book at my mother's house. The recipe came from an old neighbour of ours on the Legaterriff Road and has been improved on by my mother, Clare.</p>
         <p><img src="../images/oatmeal-biscuits.jpg" alt="stacked fresh oatmeal bisuits"></p>
+        <p>This is a family recipe that for years was kept on a scrap of paper tucked away in an old recipe book at my mother's house. The recipe came from an old neighbour of hers on the Kilcorig Road and has been improved on by my mother, Clare.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>170g    Butter</li>
+            <li>85g     Castor Sugar</li>
+            <li>85g     Plain Flour</li>
+            <li>170g    Organic Jumbo Oats</li>
+            <li>1/2tsp  Baking Soda</li>
+        </ul>
     </body>
 </html>
