method list added to oatmeal-biscuits

--- a/pages/oatmeal-biscuits.html
+++ b/pages/oatmeal-biscuits.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Ann's Oatmeal Biscuits</h1>
         <p><img src="../images/oatmeal-biscuits.jpg" alt="stacked fresh oatmeal bisuits"></p>
-        <p>This is a family recipe that for years was kept on a scrap of paper tucked away in an old recipe book at my mother's house. The recipe came from an old neighbour of hers on the Kilcorig Road and has been improved on by my mother, Clare.</p>
+        <p>This is a family recipe that for years was kept on a scrap of paper tucked away in an old recipe book in our kitchen. The recipe came from an old neighbour of hers on the Kilcorig Road and has been improved on by my mother, Clare. Growing up, this was my favourite food to bake.</p>
         <h3>Ingredients</h3>
         <ul>
             <li>170g    Butter</li>
@@ -16,5 +16,12 @@
             <li>170g    Organic Jumbo Oats</li>
             <li>1/2tsp  Baking Soda</li>
         </ul>
+        <h3>Method</h3>
+        <ol>
+            <li>Cream the butter and sugar until smooth.</li>
+            <li>Add and mix the plain flour, oats and baking soda.</li>
+            <li>With wet hands, roll into small 'golfballs' and flatten.</li>
+            <li>Bake on a sheet at 150 degrees (130 fan oven) until golden.</li>
+        </ol>
     </body>
 </html>
