changed index links to unorganised list

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>Recipes</h1>
-    <p><a href="./pages/oatmeal-biscuits.html">Ann's Oatmeal Biscuits</a></p>
+    <ul>
+        <li><a href="./pages/oatmeal-biscuits.html">Ann's Oatmeal Biscuits</a></li>
+    </ul>
 </body>
 </html>
