boilerplate for chilli added

--- a/pages/oatmeal-biscuits.html
+++ b/pages/oatmeal-biscuits.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Ann's Oatmeal Biscuits</h1>
         <p><img src="../images/oatmeal-biscuits.jpg" alt="stacked fresh oatmeal bisuits"></p>
-        <p>This is a family recipe that for years was kept on a scrap of paper tucked away in an old recipe book in our kitchen. The recipe came from an old neighbour of hers on the Kilcorig Road and has been improved on by my mother, Clare. Growing up, this was my favourite food to bake.</p>
+        <p>This is a family recipe that for years was kept on a scrap of paper tucked away in an old recipe book in our kitchen. The recipe came from an old neighbour of hers on the Kilcorig Road and has been improved on by my mother, Clare. Growing up, this was my favourite thing to bake.</p>
         <h3>Ingredients</h3>
         <ul>
             <li>170g    Butter</li>
