chilli page completed - chilli image moved to img directory

--- a/pages/chilli.html
+++ b/pages/chilli.html
@@ -5,6 +5,37 @@
         <title>Joaquim's Chilli</title>
     </head>
     <body>
-    
+        <h1>Joaquim's Chilli</h1>
+        <p><img src="../images/chilli.jpg" alt="a bowl of chilli con carne"></p>
+        <p>Around 17 years old I started working as a groundsman for an arborist company and developed a fierce appetite. One of my favourite foods to satisfy my need for big calories was a chilli con carne (best served on chips, in my opinion). This recipe was given to me by my mother when I moved out of home and since then it has been my number 1 go to dish.</p>
+        <p>I've attemped to refine the recipe over the years, some good tweaks, a lot of bad. Here is my latest iteration. </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1tbsp       Olive Oil</li>
+            <li>1           Brown Onion</li>
+            <li>3 Cloves    Garlic</li>
+            <li>1           Large Red Bell Pepper</li>
+            <li>500g        Lean Beef Mince</li>
+            <li>1 Packet    Chilli Con Carne Seasoning</li>
+            <li>1tbsp       Tomato Paste</li>
+            <li>1 Can       Chopped Tomatoes</li>
+            <li>1 Cube      Beef Stock</li>
+            <li>1 Can       Red Kidney Beans</li>
+            <li>1 Can       Black Beans</li>
+            <li>1 Square    Dark Chocolate</li>
+            <li>2 Cups      Grated Cheddar</li>
+            <li>1/2 Cup     Sour Cream</li>
+        </ul>
+        <h3>Method</h3>
+        <ol>
+            <li>Dice the brown onion and capsicum, chop the garlic and add both to a large frying pan with the olive oil on medium heat.</li>
+            <li>Once the onion is translucent (~5 minutes) add the mince and fry until fully browned.</li>
+            <li>Add the chilli seasoning to the pan with salt and pepper to taste. Mix through.</li>
+            <li>Add the chopped tomatoes, tomato paste, and beef stock cube.</li>
+            <li>Drain and add the kindey beans and black beans.</li>
+            <li>Add the dark chocolate and stir through until melted.</li>
+            <li>Simmer until slightly thickened.</li>
+            <li>Serve over chips or rice, top with sour cream and cheese.</li>
+        </ol>
     </body>
 </html>
