chilli link added to index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Recipes</h1>
     <ul>
         <li><a href="./pages/oatmeal-biscuits.html">Ann's Oatmeal Biscuits</a></li>
+        <li><a href="./pages/chilli.html">Joaquim's Chilli</a></li>
     </ul>
 </body>
 </html>
