--- a/pages/chilli.html
+++ b/pages/chilli.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Joaquim's Chilli</title>
+        <title>Chilli</title>
     </head>
     <body>
-        <h1>Joaquim's Chilli</h1>
+        <h1>Chilli</h1>
         <p><img src="../images/chilli.jpg" alt="a bowl of chilli con carne"></p>
         <p>Around 17 years old I started working as a groundsman for an arborist company and developed a fierce appetite. One of my favourite foods to satisfy my need for big calories was a chilli con carne (best served on chips, in my opinion). This recipe was given to me by my mother when I moved out of home and since then it has been my number 1 go to dish.</p>
         <p>I've attemped to refine the recipe over the years, some good tweaks, a lot of bad. Here is my latest iteration. </p>
