moroccan page completed

--- a/pages/moroccan.html
+++ b/pages/moroccan.html
@@ -10,28 +10,26 @@
         <p>I found this recipe while looking for something to cook for my partner Steph. It was really well received.</p>
         <h3>Ingredients</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>1 Packet Chicken Strips</li>
+            <li>Juice of 2 Limes</li>
+            <li>3tbsp Olive Oil</li>
+            <li>3 Cloves Garlic</li>
+            <li>1 1/2tsp Ground Cumin</li>
+            <li>2tbsp Canola Oil</li>
+            <li>1 Large Leek, Washed and Thinly Sliced</li>
+            <li>1tbsp Harissa Paste</li>
+            <li>1tsp Ground Tumeric</li>
+            <li>1/2tsp Ground Cinnamon</li>
+            <li>1 1/4 Cups Pearl Couscous</li>
+            <li>1 1/2 Cups Chicken Stock</li>
         </ul>
         <h3>Method</h3>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Marinade the chicken in a mixture of the lime juice, olive oil, galic and cumin for 30 minutes at room temperature.</li>
+            <li>Heat the canola oil in a large dutch oven with lid on medium-high, when hot add the chicken and cook until well browned.</li>
+            <li>Set chicken aside, reduce heat to medium and fry leek until translucent, approximately 4 mins. Add harissa paste, turmeric, and cinnamon, cook until lightly toasted (approximately 2 minutes). Season with salt.</li>
+            <li>Add couscous and coat in the leek oil. Add stock and boil. Turn heat low and add chicken with any juices. Cover and simmer for 15 minutes or until couscous is Al Dente and Chicken is cooked through.</li>
+            <li>Remove from heat and serve.</li>
         </ol>
     </body>
 </html>
