moroccan link added to index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="./pages/oatmeal-biscuits.html">Ann's Oatmeal Biscuits</a></li>
         <li><a href="./pages/chilli.html">Chilli</a></li>
+        <li><a href="./pages/moroccan.html">Moroccan Chicken with Pearl Couscous</a></li>
     </ul>
 </body>
 </html>
