--- a/pages/moroccan.html
+++ b/pages/moroccan.html
@@ -18,7 +18,7 @@
             <li>2tbsp Canola Oil</li>
             <li>1 Large Leek, Washed and Thinly Sliced</li>
             <li>1tbsp Harissa Paste</li>
-            <li>1tsp Ground Tumeric</li>
+            <li>1tsp Ground Turmeric</li>
             <li>1/2tsp Ground Cinnamon</li>
             <li>1 1/4 Cups Pearl Couscous</li>
             <li>1 1/2 Cups Chicken Stock</li>
