again trying to change images

--- a/pages/chilli.html
+++ b/pages/chilli.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Chilli</h1>
-        <p><img src="../images/chilli.jpg" alt="a bowl of chilli con carne"></p>
+        <p><img src="../images/chilli-1.jpg" alt="a bowl of chilli con carne"></p>
         <p>Around 17 years old I started working as a groundsman for an arborist company and developed a fierce appetite. One of my favourite foods to satisfy my need for big calories was a chilli con carne (best served on chips, in my opinion). This recipe was given to me by my mother when I moved out of home and since then it has been my number 1 go to dish.</p>
         <p>I've attemped to refine the recipe over the years, some good tweaks, a lot of bad. Here is my latest iteration. </p>
         <h3>Ingredients</h3>
