--- a/pages/moroccan.html
+++ b/pages/moroccan.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Moroccan Chicken With Pearl Couscous</h1>
-        <p><img src="../images/moroccan.jpg" alt="a pan of moroccan spiced chicken with pearl couscous"></p>
+        <p><img src="../images/moroccan-1.jpg" alt="a pan of moroccan spiced chicken with pearl couscous"></p>
         <p>I found this recipe while looking for something to cook for my partner Steph. It was really well received.</p>
         <h3>Ingredients</h3>
         <ul>
